[tool.poetry]
name = "homework-09-web"
version = "0.1.0"
description = ""
authors = ["TurMod <turbo.moderator@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_09_web"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
